@@ -46,6 +46,7 @@ DBD::mysql = 4.00
 DBD::Pg    = 3.5.0
 
 [Prereqs / DevelopRequires]
+DBD::SQLite = 1.44
 
 [MakeMaker]
 [CPANFile]
