@@ -1,0 +1,4 @@
+CREATE TABLE quick_test (
+    test_id     INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,
+    test_val    TEXT
+);
