@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add sqlite driver
+
 0.000002  2018-01-28 09:08:30-08:00 America/Los_Angeles
 
     - Minor bug fixes
